Trimmed table padding to prevent cell overflow on Summary

--- a/ClientApp/app/payroll/payroll.summary/payroll.summary.component.css
+++ b/ClientApp/app/payroll/payroll.summary/payroll.summary.component.css
@@ -53,11 +53,13 @@ table {
     width: 100%;
 }
 
-td {
+table tbody tr td {
     max-width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 p-calendar > span.ui-calendar > input {
